<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.RegisterActivity">

            <ImageView
                android:id="@+id/img_register_logo"
                android:layout_width="122dp"
                android:layout_height="106dp"
                android:layout_marginTop="56dp"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tv_register_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:text="@string/main_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_register_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/register_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/mc_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_app_title" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="@color/primary300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
                app:layout_constraintVertical_bias="0.252"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_title">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_first_name"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_last_name"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_email"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_phone_number"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_address"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_postal_code"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_postal_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/label_password"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:inputType="textPassword"
                            android:textColor="@color/input_hint" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:hint="@string/label_confirm_password"
                            app:boxBackgroundColor="@color/input_field_background"
                            app:boxStrokeColor="@color/primary800"
                            app:endIconMode="password_toggle">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_register_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:textColor="@color/input_hint" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register_submit"
                        style="@style/PrimaryRoundedButton"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_main_button"
                        android:text="@string/register_title"
                        android:textSize="24sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fr_register_loading"
                android:name="com.inetum.realdolmen.crashkit.fragments.LoadingFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
